give up on preventing navbar collapse

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,3 @@
-// the CSS framework & bootswatch theme
-$grid-float-breakpoint: 400px; // basically, never collapse
-
 @import "bootstrap-sprockets";
 @import "bootswatch/yeti/variables";
 @import "bootstrap";
